--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #282c34;
+  background-color:#FFFFFF;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -7,5 +7,42 @@ body {
   text-align: center;
   /* justify-content: center; */
   font-size: calc(10px + 2vmin);
+  color: black;
+}
+
+.header {
+  background-color: #E5E5E5;
+  color: black;
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: bold;
+  text-decoration-line: underline;
+}
+
+h1 {
+  font-family: Open Sans;
+  font-style: normal;
+  color: #333333;
+}
+
+h2 {
+  font-family: Open Sans;
+  font-style: normal;
+}
+
+form, .impact {
+  background: linear-gradient(43.45deg, #D98484 14.32%, rgba(217, 132, 132, 0.79) 88.44%);
+  box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.25);
+  border-radius: 20px;
   color: white;
+}
+
+input {
+  background: #B86868;
+}
+
+button {
+  background: linear-gradient(185.38deg, #FFFFFF 19.34%, #E0E0E0 78.34%);
+  border-radius: 10px;
+  color: black;
 }
