--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Mansalva&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Mansalva&display=swap'); */
 
 body {
   background-color:#FFFFFF;
