--- a/src/App.css
+++ b/src/App.css
@@ -43,20 +43,20 @@ a:hover, a:active {
   width: 25em;
 }
 
-form {
+/* form {
   background: linear-gradient(43.45deg, #D98484 14.32%, rgba(217, 132, 132, 0.79) 88.44%);
   box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.25);
   border-radius: 20px;
   color: white;
-}
+} */
+
+/* input {
+  background: #B86868;
+} */
 
 .greta {
   border-radius: 50%;
   width: 15em;
-}
-
-input {
-  background: #B86868;
 }
 
 button {
