--- a/src/App.css
+++ b/src/App.css
@@ -20,17 +20,27 @@ body {
   color: #4F4F4F;
 }
 
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
 .hamburger {
   float: right;
   cursor: pointer;
+  position: absolute;
+  top: 1.1em;
+  right: 0;
+  margin-right: 1em;
 }
 
-.domain {
+.logo {
   color: #828282;
   font-family: Mansalva;
   font-size: 2em;
   padding: 0.3em;
-  margin-bottom: 0.5em;
+  /* margin-bottom: 0.5em; */
 }
 
 a:link, a:visited {
