--- a/src/App.css
+++ b/src/App.css
@@ -20,28 +20,77 @@ body {
   color: #4F4F4F;
 }
 
-.menu {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.hamburger {
-  float: right;
-  cursor: pointer;
-  position: absolute;
-  top: 1.1em;
-  right: 0;
-  margin-right: 1em;
-}
-
 .logo {
   color: #828282;
   font-family: Mansalva;
-  font-size: 2em;
+  font-size: 1.5em;
   padding: 0.3em;
-  /* margin-bottom: 0.5em; */
+  position:fixed; 
+  top:0; 
+  left:0;
 }
+
+.nav {
+  font-size: 1.3em;
+}
+
+.menu {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: baseline;
+}
+
+.desktop {
+  margin-right: 1em;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+}
+
+li {
+  margin-left: 1em;
+}
+
+.hamburger, .mobile {
+  display: none;
+}
+
+@media only screen and (max-width: 768px) {
+
+  .desktop{
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
+
+  .menu {
+    justify-content: center;
+  }
+
+  .logo {
+    font-size: 2em;
+    padding: 0.3em;
+    position: relative;
+  }
+    
+  .hamburger {
+    display: block;
+    float: right;
+    cursor: pointer;
+    position: absolute;
+    top: 1.1em;
+    right: 0;
+    margin-right: 1em;
+  }
+  
+}
+
+
 
 a:link, a:visited, a:active {
   text-decoration: none;
