--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@ body {
   font-family: Mansalva;
   font-size: 1.5em;
   padding: 0.3em;
-  position:fixed; 
+  position: absolute; 
   top:0; 
   left:0;
 }
@@ -86,8 +86,6 @@ li {
   }
   
 }
-
-
 
 a:link, a:visited, a:active {
   text-decoration: none;
