--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 body {
   background-color:#FFFFFF;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   /* align-items: center;   */
@@ -53,6 +53,14 @@ li {
 
 .hamburger, .mobile {
   display: none;
+}
+
+.page {
+  padding: 0.3em;
+}
+
+.icon {
+  margin: 2em;
 }
 
 @media only screen and (max-width: 768px) {
@@ -106,17 +114,6 @@ a:hover {
   width: 20em;
 }
 
-/* form {
-  background: linear-gradient(43.45deg, #D98484 14.32%, rgba(217, 132, 132, 0.79) 88.44%);
-  box-shadow: 0px 2px 24px rgba(0, 0, 0, 0.25);
-  border-radius: 20px;
-  color: white;
-} */
-
-/* input {
-  background: #B86868;
-} */
-
 .greta {
   border-radius: 50%;
   width: 10em;
@@ -126,4 +123,9 @@ button {
   background: linear-gradient(185.38deg, #FFFFFF 19.34%, #E0E0E0 78.34%);
   border-radius: 10px;
   color: black;
+}
+
+.footer {
+  margin-top: 5em;
+  padding: 2em;
 }
