--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,19 @@ button:hover {
           line-height: 40px;
         }
 
+.item-intro {
+  display: flex;
+  padding: 20px;
+  align-items: center;
+  font-family: Open Sans;
+  font-style: normal;
+  font-size: 18px;
+  line-height: 24px;
+  width: 370px;
+  height: 80px;
+  margin: 20px;
+}
+
       @media only screen and (max-width: 1000px) {
 
         /* body {
@@ -152,6 +165,18 @@ button:hover {
           top: 1.1em;
           right: 0;
           margin-right: 1em;
+        }
+
+        .item-intro {
+          display: flex;
+          padding: 20px;
+          align-items: center;
+          font-family: Open Sans;
+          font-style: normal;
+          font-size: 18px;
+          line-height: 24px;
+          /* width: 200px; */
+          width: auto;
         }
         
       }
@@ -220,19 +245,6 @@ button:hover {
   line-height: 24px;
   padding: 3px 7px 3px 7px;
   margin-top: 20px;
-}
-
-.item-intro {
-  display: flex;
-  padding: 20px;
-  align-items: center;
-  font-family: Open Sans;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 24px;
-  width: 370px;
-  height: 80px;
-  margin: 20px;
 }
 
 .item-intro-title {
