transparent background for mobile menu

--- a/src/App.css
+++ b/src/App.css
@@ -124,8 +124,9 @@ button:hover {
           display: flex;
           /* justify-content: center; */
           flex-direction: column;
+          /* background-color: white; */
+          background-color: transparent;
           /* align-content: center; */
-          background-color: white;
           text-align: center;
           /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25); */
         }
@@ -148,6 +149,8 @@ button:hover {
           display: flex;
           justify-content: flex-start;
           padding: 0px;
+          background-color: transparent;
+          box-shadow: none;
         }
 
         .logo {
@@ -175,7 +178,6 @@ button:hover {
           font-style: normal;
           font-size: 18px;
           line-height: 24px;
-          /* width: 200px; */
           width: auto;
         }
         
@@ -203,6 +205,11 @@ button:hover {
 .catchy {
   float: left;
   max-width: 900px;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start; */
+  align-items: flex-start;
+  /* justify-content: center; */
   /* margin-right: 20px; */
   /* margin-left: 20px; */
 }
