--- a/src/App.css
+++ b/src/App.css
@@ -113,75 +113,7 @@ button:hover {
   margin: 20px;
 }
 
-      @media only screen and (max-width: 1000px) {
-
-        /* body {
-          font-size: calc(10px + 2vmin);
-        } */
-
-        .header {
-          color: #4F4F4F;
-          display: flex;
-          /* justify-content: center; */
-          flex-direction: column;
-          /* background-color: white; */
-          background-color: transparent;
-          /* align-content: center; */
-          text-align: center;
-          /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25); */
-        }
-
-        .nav {
-          color: #4F4F4F;
-        }
-
-        .desktop {
-          display: none;
-        }
-
-        .mobile {
-          display: block;
-        }
-
-        .menu {
-          /* justify-content: center; */
-          /* width: 100%; */
-          display: flex;
-          justify-content: flex-start;
-          padding: 0px;
-          background-color: transparent;
-          box-shadow: none;
-        }
-
-        .logo {
-          padding: 10px;
-          /* position: absolute; 
-          top:0; 
-          left:0; */
-        }
-
-        .hamburger {
-          display: block;
-          float: right;
-          cursor: pointer;
-          position: absolute;
-          top: 1.1em;
-          right: 0;
-          margin-right: 1em;
-        }
-
-        .item-intro {
-          display: flex;
-          padding: 20px;
-          align-items: center;
-          font-family: Open Sans;
-          font-style: normal;
-          font-size: 18px;
-          line-height: 24px;
-          width: auto;
-        }
-        
-      }
+      
 /* home */
 
 .home{
@@ -202,16 +134,16 @@ button:hover {
   margin-bottom: -13px;
 }
 
-.catchy {
-  float: left;
-  max-width: 900px;
+.cover-container {
   display: flex;
   flex-direction: column;
-  /* justify-content: flex-start; */
-  align-items: flex-start;
-  /* justify-content: center; */
-  /* margin-right: 20px; */
-  /* margin-left: 20px; */
+  align-items: center;
+}
+
+.catchy {
+  float: left;
+  display: flex;
+  flex-direction: column;
 }
 
 .cover-title {
@@ -389,4 +321,76 @@ input:focus, select:focus {
   font-weight: 300;
   font-size: 18px;
   line-height: 40px;
+}
+
+
+
+@media only screen and (max-width: 1000px) {
+
+  /* body {
+    font-size: calc(10px + 2vmin);
+  } */
+
+  .header {
+    color: #4F4F4F;
+    display: flex;
+    /* justify-content: center; */
+    flex-direction: column;
+    /* background-color: white; */
+    background-color: transparent;
+    /* align-content: center; */
+    text-align: center;
+    /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25); */
+  }
+
+  .nav {
+    color: #4F4F4F;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .mobile {
+    display: block;
+  }
+
+  .menu {
+    /* justify-content: center; */
+    /* width: 100%; */
+    display: flex;
+    justify-content: flex-start;
+    padding: 0px;
+    background-color: transparent;
+    box-shadow: none;
+  }
+
+  .logo {
+    padding: 10px;
+    /* position: absolute; 
+    top:0; 
+    left:0; */
+  }
+
+  .hamburger {
+    display: block;
+    float: right;
+    cursor: pointer;
+    position: absolute;
+    top: 1.1em;
+    right: 0;
+    margin-right: 1em;
+  }
+
+  .item-intro {
+    display: flex;
+    padding: 20px;
+    align-items: center;
+    font-family: Open Sans;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 24px;
+    width: auto;
+  }
+  
 }
