--- a/src/App.css
+++ b/src/App.css
@@ -48,13 +48,15 @@ button:hover {
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
     border-radius: 0px 0px 8px 8px;
     background-color: #FFFFFF;
-    padding-left: 150px;
-    padding-right: 150px;
-    max-width: 900px;
+    /* max-width: 900px; */
+    width: 900px;
   }
 
     .logo {
       padding: 10px;
+      display: flex;
+      justify-content: flex-start;
+      margin-right: 190px;
     }
 
     a:link, a:visited, a:active {
@@ -144,6 +146,8 @@ button:hover {
   float: left;
   display: flex;
   flex-direction: column;
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .cover-title {
@@ -311,10 +315,17 @@ input:focus, select:focus {
 }
 
 .fb-share-button {
+  /* text-align: center; */
   font-family: Open Sans;
   font-weight: bold;
   font-size: 14px;
   line-height: 40px;
+  /* color: white;
+  background-color: #2F80ED;
+  border: 3px dashed #FFFFFF;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 8px;
+  width: 300px; */
 }
 
 .rights {
@@ -362,9 +373,9 @@ input:focus, select:focus {
     /* width: 100%; */
     display: flex;
     justify-content: flex-start;
-    padding: 0px;
     background-color: transparent;
     box-shadow: none;
+    width: 100%;
   }
 
   .logo {
