--- a/src/App.css
+++ b/src/App.css
@@ -246,6 +246,7 @@ button:hover {
   font-size: 16px;
   line-height: 24px;
   margin-left: 10px;
+  margin-right: 10px;
   padding-top: 10px;
   padding-bottom: 30px;
 }
