--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,32 @@
 
 body {
   background-color:#FFFFFF;
-  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
-  /* align-items: center;   */
-  /* text-align: center; */
-  /* justify-content: center; */
-  /* font-size: calc(10px + 2vmin); */
   color: black;
   font-family: Open Sans;
 }
+
+.page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+  .page-title {
+    font-family: Open Sans;
+    font-weight: 800;
+    font-size: 60px;
+    line-height: 82px;
+    margin-top: 40px;
+  }
+
+  .section-title {
+    font-family: Open Sans;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 24px;
+  }
 
 .impact-button {
   cursor: pointer;
@@ -31,14 +47,35 @@ button:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
-.header {
+a:link, a:visited, a:active {
+  text-decoration: none;
   color: #4F4F4F;
+  font-weight: normal;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #4F4F4F;
+}
+
+
+/* header */
+
+.header {
   display: flex;
   justify-content: center;
-  /* flex-direction: column; */
-  /* align-content: center; */
-  /* background-color: white; */
+  color: #4F4F4F;
 }
+
+  .desktop {
+    display: flex;
+    margin-right: 1em;
+    list-style-type: none;
+  }
+
+  .hamburger, .mobile {
+    display: none;
+  }
 
   .menu {
     display: flex;
@@ -48,83 +85,48 @@ button:hover {
     box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
     border-radius: 0px 0px 8px 8px;
     background-color: #FFFFFF;
-    /* max-width: 900px; */
     width: 900px;
   }
 
     .logo {
-      padding: 10px;
       display: flex;
       justify-content: flex-start;
+      padding: 10px;
       margin-right: 190px;
     }
 
-    a:link, a:visited, a:active {
-      text-decoration: none;
-      color: #4F4F4F;
-      font-weight: normal;
+    .menu-impact-button {
+      font-style: normal;
+      font-weight: bold;
+      font-size: 14px;
+      line-height: 24px;
     }
-    
-    a:hover {
-      text-decoration: underline;
-      color: #4F4F4F;
-    }
-    
+
     .current{
       font-weight: bold;
     }
 
-      .desktop {
-        list-style-type: none;
-        display: flex;
-        margin-right: 1em;
-      }
 
-        .impact-button-menu {
-          font-style: normal;
-          font-weight: bold;
-          font-size: 14px;
-          line-height: 24px;
-        }
+/* nav */
 
-        li {
-          margin-left: 1em;
-          list-style-type: none;
-        }
-
-      .hamburger, .mobile {
-        display: none;
-      }
-
-        .nav {
-          font-family: Open Sans;
-          font-size: 14px;
-          line-height: 40px;
-        }
-
-.item-intro {
-  display: flex;
-  padding: 20px;
-  align-items: center;
+.nav {
   font-family: Open Sans;
-  font-style: normal;
-  font-size: 18px;
-  line-height: 24px;
-  width: 370px;
-  height: 80px;
-  margin: 20px;
+  font-size: 14px;
+  line-height: 40px;
 }
 
-      
-/* home */
+.hide {
+  display: none;
+}
 
-.home{
+
+/* cover */
+
+.cover-container {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
-/* Intro section */
 
 .cover {
   background-color: #2FE2ED;
@@ -136,12 +138,6 @@ button:hover {
   margin-bottom: -13px;
 }
 
-.cover-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .catchy {
   float: left;
   display: flex;
@@ -150,82 +146,76 @@ button:hover {
   margin-right: 20px;
 }
 
-.cover-title {
-  font-family: Open Sans;
-  font-weight: 800;
-  font-size: 60px;
-  line-height: 82px;
-  margin-top: 40px;
+  .cover-support {
+    font-family: Open Sans;
+    font-weight: normal;
+    font-size: 26px;
+    line-height: 35px;
+  }
+
+  .cover-impact-button {
+    font-size: 14px;
+    line-height: 24px;
+    padding: 3px 7px 3px 7px;
+    margin-top: 20px;
+  }
+
+.impact-cover {
+  width: 100%;
+  background-color: #F2F2F2;
 }
 
-.cover-support {
-  font-family: Open Sans;
-  font-weight: normal;
-  font-size: 26px;
-  line-height: 35px;
-}
 
-.icon {
-  margin: 1em;
-}
+/* intro */
 
-.section-title {
-  font-family: Open Sans;
-  font-weight: bold;
-  font-size: 36px;
-  line-height: 24px;
-}
-
-.intro-title {
-  margin-right: 10px;
-  margin-left: 10px;
-  margin-top: 60px;
-  margin-bottom: 40px;
-}
-
-.impact-button-cover {
-  font-size: 14px;
-  line-height: 24px;
-  padding: 3px 7px 3px 7px;
-  margin-top: 20px;
-}
-
-.item-intro-title {
-  font-weight: bold;
-}
-
-.grid-container {
+.intro-container {
   margin: 30px 10px 50px 10px;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  /* align-items: center; */
   max-width: 900px;
-  /* background: #F2F2F2;
-  border-radius: 20px; */
-  /* padding: 10px; */
 }
 
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
+  .intro-title {
+    margin-right: 10px;
+    margin-left: 10px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+  }
+  
+  .intro-row {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+    .intro-item {
+      display: flex;
+      padding: 20px;
+      align-items: center;
+      font-family: Open Sans;
+      font-style: normal;
+      font-size: 18px;
+      line-height: 24px;
+      width: 370px;
+      height: 80px;
+      margin: 20px;
+    }
 
-.intro {
-  display: flex;
-  align-items: center;
-}
+      .intro-item-image {
+        padding-right: 20px;
+        width: 100px;
+        height: 100px;
+      }
 
-.intro-image {
-  padding-right: 20px;
-  width: 100px;
-  height: 100px;
-}
+      .intro-item-title {
+        font-weight: bold;
+      }
+
 
 /* form  */
 
-.impact-form {
+.form-home {
   max-width: 900px;
   margin-right: 20px;
   margin-left: 20px;
@@ -234,13 +224,21 @@ button:hover {
   padding: 10px;
 }
 
-.algorithm-title {
+.form-impact {
+  margin-right: 20px;
+  margin-left: 20px;
+  background: #F2F2F2;
+  border-radius: 20px;
+  padding: 10px;
+}
+
+.form-title {
   margin-left: 10px;
   padding-top: 30px;
   padding-bottom: 10px;
 }
 
-.algorithm-support {
+.form-support {
   font-family: Open Sans;
   font-weight: 300;
   font-size: 16px;
@@ -251,57 +249,56 @@ button:hover {
   padding-bottom: 30px;
 }
 
-.impact-form-visual {
+.form-input-section {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
 }
 
-.impact-input-form {
-  font-family: Open Sans;
-  font-weight: bold;
-  border: 3px dotted #BDBDBD;
-  border-radius: 8px;
-  font-family: Open Sans;
-  font-style: normal;
-  font-weight: normal;
-  background-color: #FFFFFF;
-  /* font-size: 30px; */
-  font-size: 24px;
-  line-height: 40px;
-  margin: 10px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
+  .form-input {
+    font-family: Open Sans;
+    font-weight: bold;
+    border: 3px dotted #BDBDBD;
+    border-radius: 8px;
+    font-family: Open Sans;
+    font-style: normal;
+    font-weight: normal;
+    background-color: #FFFFFF;
+    font-size: 24px;
+    line-height: 40px;
+    margin: 10px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 
-input:focus, select:focus {
-  border-color: #BB6BD9;
-  outline: none;
-}
+    input:focus, select:focus {
+      border-color: #BB6BD9;
+      outline: none;
+    }
 
-  .impact-number-form {
+  .form-number {
     width: 75px;
     text-align: center;
     padding-left: 15px;
   }
 
-  .impact-select-form {
+  .form-select {
     appearance: none;
     padding: 10px;
   }
 
-.impact-button-form {
-  font-size: 24px;
-  line-height: 32px;
-  /* padding: 15px 60px 15px 60px; */
-  padding: 15px 78px 15px 78px;
-  margin: 10px;
-}
+  .form-button {
+    font-size: 24px;
+    line-height: 32px;
+    padding: 15px 78px 15px 78px;
+    margin: 10px;
+  }
 
-.beef-image {
+.form-image {
   width: 250px;
   margin-left: 75px;
 }
+
 
 /* footer */
 
@@ -311,23 +308,18 @@ input:focus, select:focus {
   text-align: center;
 }
 
-.hide {
-  display: none;
-}
-
 .fb-share-button {
-  /* text-align: center; */
   font-family: Open Sans;
   font-weight: bold;
   font-size: 14px;
   line-height: 40px;
+  margin-bottom: 30px;
   /* color: white;
   background-color: #2F80ED;
   border: 3px dashed #FFFFFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
   width: 300px; */
-  margin-bottom: 30px;
 }
 
 .socials {
@@ -349,26 +341,6 @@ input:focus, select:focus {
 
 @media only screen and (max-width: 1000px) {
 
-  /* body {
-    font-size: calc(10px + 2vmin);
-  } */
-
-  .header {
-    color: #4F4F4F;
-    display: flex;
-    /* justify-content: center; */
-    flex-direction: column;
-    /* background-color: white; */
-    background-color: transparent;
-    /* align-content: center; */
-    text-align: center;
-    /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25); */
-  }
-
-  .nav {
-    color: #4F4F4F;
-  }
-
   .desktop {
     display: none;
   }
@@ -377,9 +349,15 @@ input:focus, select:focus {
     display: block;
   }
 
+  .header {
+    color: #4F4F4F;
+    display: flex;
+    flex-direction: column;
+    background-color: transparent;
+    text-align: center;
+  }
+
   .menu {
-    /* justify-content: center; */
-    /* width: 100%; */
     display: flex;
     justify-content: flex-start;
     background-color: transparent;
@@ -389,9 +367,6 @@ input:focus, select:focus {
 
   .logo {
     padding: 10px;
-    /* position: absolute; 
-    top:0; 
-    left:0; */
   }
 
   .hamburger {
@@ -402,6 +377,10 @@ input:focus, select:focus {
     top: 1.1em;
     right: 0;
     margin-right: 1em;
+  }
+
+  .nav {
+    color: #4F4F4F;
   }
 
   .item-intro {
