--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,14 @@ body {
   outline: none;
 }
 
+  .impact-button-impactpage{
+    color: #4F4F4F;
+    background: #F2F2F2;
+    border: 3px dashed #BDBDBD;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+  }
+
 button:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
