--- a/src/App.css
+++ b/src/App.css
@@ -311,6 +311,18 @@ a:hover {
 }
 
 
+/* pollutions */
+
+.comparison {
+  font-family: Open Sans;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+
 /* footer */
 
 .footer {
