--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   display: flex;
   flex-direction: column;
   color: black;
-  font-family: Open Sans;
+  font-family: 'Open Sans';
 }
 
 .page {
@@ -17,15 +17,17 @@ body {
 }
 
   .page-title {
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-weight: 800;
     font-size: 60px;
     line-height: 82px;
     margin-top: 40px;
+    font-weight: 800;
+    /* text-align: center; */
   }
 
   .section-title {
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-weight: bold;
     font-size: 36px;
     line-height: 24px;
@@ -33,14 +35,14 @@ body {
 
 .impact-button {
   cursor: pointer;
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-weight: bold;
   color: white;
   background: #BB6BD9;
   border: 3px dotted #FFFFFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 8px;
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   outline: none;
 }
 
@@ -119,7 +121,7 @@ a:hover {
 /* nav */
 
 .nav {
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-size: 14px;
   line-height: 40px;
 }
@@ -157,7 +159,7 @@ a:hover {
   }
 
     .cover-support {
-      font-family: Open Sans;
+      font-family: 'Open Sans';
       font-weight: normal;
       font-size: 26px;
       line-height: 35px;
@@ -203,7 +205,7 @@ a:hover {
       display: flex;
       padding: 20px;
       align-items: center;
-      font-family: Open Sans;
+      font-family: 'Open Sans';
       font-style: normal;
       font-size: 18px;
       line-height: 24px;
@@ -249,7 +251,7 @@ a:hover {
 }
 
 .form-support {
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-weight: 300;
   font-size: 16px;
   line-height: 24px;
@@ -263,14 +265,22 @@ a:hover {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  /* flex-direction: column; */
 }
 
+  .form-input-section-impactpage {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+  }
+
   .form-input {
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-weight: bold;
     border: 3px dotted #BDBDBD;
     border-radius: 8px;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-style: normal;
     font-weight: normal;
     background-color: #FFFFFF;
@@ -313,8 +323,24 @@ a:hover {
 
 /* pollutions */
 
+.pollutions {
+  margin-left: 20px;
+}
+
+.pollution {
+  margin: 50px 0px 30px 0px;
+}
+
+.grams {
+  margin: 30px 0px 50px 0px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px;
+  line-height: 40px;
+}
+
 .comparison {
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-weight: normal;
   font-size: 20px;
   line-height: 24px;
@@ -332,7 +358,7 @@ a:hover {
 }
 
 .fb-share-button {
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-weight: bold;
   font-size: 14px;
   line-height: 40px;
@@ -357,7 +383,7 @@ a:hover {
     }
 
 .rights {
-  font-family: Open Sans;
+  font-family: 'Open Sans';
   font-style: italic;
   font-weight: 300;
   font-size: 18px;
@@ -417,7 +443,7 @@ a:hover {
     display: flex;
     padding: 20px;
     align-items: center;
-    font-family: Open Sans;
+    font-family: 'Open Sans';
     font-style: normal;
     font-size: 18px;
     line-height: 24px;
