--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,14 @@ body {
     border-radius: 8px;
   }
 
+    .impact-button-impactpage-form {
+      margin-left: 30px;
+    }
+  
+  .impact-button-homepage-form {
+    margin: 10px;
+  }
+
 button:hover {
   box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
@@ -298,9 +306,9 @@ a:hover {
     background-color: #FFFFFF;
     font-size: 24px;
     line-height: 40px;
-    margin: 10px;
     padding-top: 10px;
     padding-bottom: 10px;
+    margin-bottom: 15px;
   }
 
     input:focus, select:focus {
@@ -309,12 +317,15 @@ a:hover {
     }
 
   .form-number {
+    margin-left: 10px;
+    margin-right: 5px;
     width: 75px;
     text-align: center;
     padding-left: 15px;
   }
 
   .form-select {
+    margin-left: 25px;
     appearance: none;
     padding: 10px;
   }
@@ -323,19 +334,22 @@ a:hover {
     font-size: 24px;
     line-height: 32px;
     padding: 15px 78px 15px 78px;
-    margin: 10px;
     margin-bottom: 20px;
+    /* margin: 10px; */
   }
 
   .form-button-position-home {
     display: flex;
     flex-direction: column;
+    /* align-items: stretch; */
   }
   
   .form-button-position-impact {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-top: 20px;
+    margin-bottom: 25px;
   }
 
 .form-image {
@@ -402,6 +416,29 @@ a:hover {
     text-decoration: none;
     color: #4F4F4F;
   } */
+
+/* loader */
+
+.loader {
+  border: 16px solid #2FE2ED;
+  border-radius: 50%;
+  border-top: 16px solid #BB6BD9;
+  width: 120px;
+  height: 120px;
+  -webkit-animation: spin 0.2s linear infinite; /* Safari */
+  animation: spin 0.2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
 /* about-us page  */
 
@@ -513,10 +550,14 @@ a:hover {
   }
   
 }
+/* 
+@media only screen and (max-width: 780px) {
+
+} */
 
 
 
-@media only screen and (max-width: 450px) {
+@media only screen and (max-width: 460px) {
 
   .logo {
     padding: 5px;
@@ -543,22 +584,32 @@ a:hover {
       border: 3px dotted #BDBDBD;
       border-radius: 8px;
       font-size: 16px;
-      margin: 5px;
-      margin-left:10px;
-      padding-top: 5px;
-      padding-bottom: 5px;
+      margin: 0px;
+      margin-bottom: 10px;
+      /* margin: 5px;
+      margin-left:10px; */
+      padding-top: 7px;
+      padding-bottom: 7px;
     }
 
       .form-number {
-        width: 40px;
+        /* width: 40px; */
+        width: 21%;
+        margin-right: 20px;
         text-align: center;
         padding-left: 8px;
+      }
+
+      .form-select {
+        width: 66%;
+        text-align: center;
       }
 
       .form-button {
         font-size: 15px;
         width: 100%;
         margin: 0px;
+        padding: 15px;
       }
 
     .form-image {
